[package]
name = "dv2macdv"
version = "0.1.0"
edition = "2024"
description = "杜比视界 MKV 转 MP4 GUI 工具"
license = "MIT"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
resvg = "0.42"
tiny-skia = "0.11"



# Windows特定依赖
[target.'cfg(windows)'.dependencies]

# Linux特定依赖
[target.'cfg(target_os = "linux")'.dependencies]



# macOS特定依赖
[target.'cfg(target_os = "macos")'.dependencies]

# 发布配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
